# KarenJar

./: README.md  settings.gradle
KJCCommonLib/: CMakeLists.txt  build.gradle
KJCCommonLib/src/main/: AndroidManifest.xml
KJCCommonLib/src/main/cpp/: kjc-native-lib.cpp
KJCCommonLib/src/main/java/com/karenjar/: KJCNative.java
KJCCommonLib/src/main/res/values/: strings.xml
KJJCommonLib/src/main/java/com/karenjar/helper/: KJFileHelper.java  KJLogHelper.java  KJStreamHelper.java
KJJCommonLib/src/main/java/com/karenjar/helper/imp/: DefaultFileHelper.java  DefaultLogHelper.java  KJAFileHelper.java  KJALogHelper.java
KJJCommonLib/src/main/java/com/karenjar/ihelper/: IFileHelper.java  ILogHelper.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/karenjar/: KarenApplication.java
app/src/main/java/com/karenjar/demo/: AndroidActivity.java  BaseDemoAty.java  BaseTabListAty.java  DemoActivity.java  LargeActivity.java  MainActivity.java  OpenGLActivity.java  VulkanActivity.java
app/src/main/java/com/karenjar/demo/opengl/: BackgroundAty.java  SaveImageAty.java
app/src/main/java/com/karenjar/demo/tab/: BaseDemoAty.java
app/src/main/java/com/karenjar/helper/android/: LogHelper.java
app/src/main/java/com/karenjar/helper/jopengl/: GLCommonUtils.java  ShaderHelper.java  TextureHelper.java  TextureOptions.java
app/src/main/res/layout/: activity_demo.xml  aty_demo_tab_gl_psblend.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
(+2 files in other folders)
